<TableLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:stretchColumns="1">	
	<TableRow>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/text_name" />
		<EditText
			android:id="@+id/name"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/text_new_connection" />
	</TableRow>
	<TableRow>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/text_password" />
		<EditText
			android:id="@+id/password"
			android:inputType="textPassword"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
	</TableRow>
	<TableRow>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/text_host" />
		<EditText
			android:id="@+id/host"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/text_hint_host" />
	</TableRow>
	<TableRow>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/text_port" />
		<EditText
			android:id="@+id/port"
			android:inputType="number"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
	</TableRow>
	<Button
		android:id="@+id/save"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/text_save" />
</TableLayout>